--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - name: Dump GitHub context
+      env:
+          GITHUB_CONTEXT: hello
+      run: echo "$GITHUB_CONTEXT"
     - uses: actions/checkout@v1
     - name: Build backend
       run:  |
