--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,6 @@ jobs:
       run: | 
         curl https://raw.githubusercontent.com/back4app/parse-cli/back4app/installer.sh | sudo /bin/bash
         b4a configure accountkey <<<"$BACK4APPKEY"
-        ls
-        b4a new <<< e <<< 1
+        cd b4apoker
+        b4a deploy
 
