--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,26 +3,15 @@ name: CI
 on: [push]
 
 jobs:
-  build_deploy:
-
+  deploy:
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v1
-    - name: Build backend
-      run:  |
-        cd backend
-        npm install
-        npm run build
-    - name: Build frontend
-      run: |
-        cp -a ./frontend/. ./b4apoker/public/
     - name: Deploy to Back4App
       env:
         BACK4APPKEY: ${{secrets.BACK4APPKEY}}
       run: | 
         curl https://raw.githubusercontent.com/back4app/parse-cli/back4app/installer.sh | sudo /bin/bash
         b4a configure accountkey <<<"$BACK4APPKEY"
-        cd b4apoker
         b4a deploy
 
